bin/compilerproject/MyNewGrammar.jjt
options {
    STATIC = false;
    LOOKAHEAD = 1;
    MULTI = true;
    VISITOR = false;
    NODE_DEFAULT_VOID = false;
}

PARSER_BEGIN(MyNewGrammar)
package compilerproject;

import java.util.ArrayList;

public class MyNewGrammar {
    public SymbolTable symbolTable = new SymbolTable();
    public SemanticAnalyzer semanticAnalyzer = new SemanticAnalyzer(symbolTable);
    public IRGenerator irGenerator = new IRGenerator();

    public static void main(String args[]) throws ParseException {
        System.out.println("CL Parser - Milestone 2");
        try {
            java.io.InputStream input = (args.length > 0)
                ? new java.io.FileInputStream(args[0])
                : System.in;

            MyNewGrammar parser = new MyNewGrammar(input);

            /* Parse and get root of parse tree */
            SimpleNode root = parser.Start();

            System.out.println("\nSUCCESS: Code parsed successfully!");

            /* Print parse tree */
            System.out.println("\n--- PARSE TREE ---");
            root.dump("  ");

            /* Print semantic summary */
            parser.semanticAnalyzer.printSummary();

            /* Print original IR */
            parser.irGenerator.printIR();

            /* Optimization */
            Optimizer optimizer = new Optimizer(parser.irGenerator.getQuadruples());
            optimizer.optimize();
            optimizer.printOptimized();

            /* Target Code Generation */
            TargetCodeGenerator codeGen = new TargetCodeGenerator(
                optimizer.getOptimizedInstructions()
            );
            codeGen.generate();
            codeGen.printAssembly();

        } catch (java.io.FileNotFoundException e) {
    System.out.println("ERROR: File not found - " + e.getMessage());

} catch (ParseException e) {
    System.out.println("\nSYNTAX ERROR:");
    System.out.println(e.getMessage());

} catch (Exception e) {
    System.out.println("\nSYSTEM ERROR:");
    System.out.println(e.getMessage());
}
    }
}
PARSER_END(MyNewGrammar)


/* ============================= */
/*   SKIP - Ignore Whitespace    */
/* ============================= */
SKIP : {
    " " | "\r" | "\t" | "\n"
}


/* ============================= */
/*           TOKENS              */
/* ============================= */
TOKEN : {
      < START_PROG:   "startProgram"  >
    | < END_PROG:     "endProgram"    >
    | < VAR_SECTION:  "variables:"    >
    | < CODE_SECTION: "code:"         >
    | < INT_TYPE:     "int"           >
    | < FLOAT_TYPE:   "float"         >
    | < CHAR_TYPE:    "char"          >
    | < STRING_TYPE:  "string"        >
    | < LOOPIF:       "loopif"        >
    | < HOLDS:        "holds"         >
    | < ENDLOOP:      "endloop"       >
    | < SWITCHFOR:    "switchFor"     >
    | < ENDSWITCH:    "endswitchFor"  >
    | < CASE:         "case"          >
    | < OTHER:        "other"         >
    | < OUTSTRING:    "outString"     >
    | < SEMICOLON:    ";"             >
    | < COLON:        ":"             >
    | < LPAREN:       "("             >
    | < RPAREN:       ")"             >
    | < PLUS:         "+"             >
    | < MINUS:        "-"             >
    | < MULT:         "*"             >
    | < DIV:          "/"             >
    | < EQUALS:       "=="            >
    | < LE:           "<="            >
    | < GE:           ">="            >
    | < NE:           "<>"            >
    | < LT:           "<"             >
    | < GT:           ">"             >
    | < ASSIGN:       "="             >
    | < FLOAT_NUMBER: (["0"-"9"])+ "." (["0"-"9"])+ >
    | < NUMBER:       (["0"-"9"])+    >
    | < STRING_LITERAL: "\"" (~["\"","\n","\r"])* "\"" >
    | < CHAR_LITERAL:   "'" (~["'","\n","\r"]) "'"     >
    | < ID: ["a"-"z","A"-"Z"] (["a"-"z","A"-"Z","0"-"9"])* >
}


/* ============================= */
/*        GRAMMAR RULES          */
/* ============================= */

SimpleNode Start() : {}
{
    <START_PROG>
    VariablesBlock()
    CodeBlock()
    <END_PROG>
    <EOF>
    { return jjtThis; }
}

void VariablesBlock() : {}
{
    <VAR_SECTION>
    ( Declaration() )*
}

void Declaration() : { Token t; Token id; Token val; }
{
    ( t = <INT_TYPE> | t = <FLOAT_TYPE> | t = <STRING_TYPE> | t = <CHAR_TYPE> )
    id = <ID>
    <ASSIGN>
    ( val = <NUMBER> | val = <FLOAT_NUMBER> | val = <STRING_LITERAL> | val = <CHAR_LITERAL> )
    <SEMICOLON>
    {
        semanticAnalyzer.declareVariable(id.image, t.image, val.image);
        irGenerator.emit("=", val.image, "", id.image);
    }
}

void CodeBlock() : {}
{
    <CODE_SECTION>
    ( Statement() )*
}

/*
 * FIX 1: #void prevents JJTree from creating a node for Statement.
 * Without #void, JJTree wraps the alternatives in a node object
 * which breaks the choice between LoopIf/SwitchFor/Assignment.
 */
void Statement() #void : {}
{
      LOOKAHEAD(<ID>) Assignment()
    | LOOKAHEAD(<LOOPIF>) LoopIf()
    | LOOKAHEAD(<SWITCHFOR>) SwitchFor()
    | LOOKAHEAD(<OUTSTRING>) OutString()
}
void Assignment() : { Token id; String exprResult; }
{
    id = <ID>
    { semanticAnalyzer.checkAssignment(id.image); }
    <ASSIGN>
    exprResult = Expression()
    <SEMICOLON>
    {
        irGenerator.emit("=", exprResult, "", id.image);
    }
}

void OutString() : { String res; Token t; }
{
    <OUTSTRING>
    <LPAREN>
    (
        LOOKAHEAD(2)
        res = Expression()
        { irGenerator.emit("print", res, "", ""); }
        |
        t = <STRING_LITERAL>
        { irGenerator.emit("print", t.image, "", ""); }
    )
    <RPAREN>
    <SEMICOLON>
}

/*
 * FIX 2: LoopIf now uses irGenerator.newLabel() instead of newTemp()
 * so loop labels (L1, L2) never clash with temp variables (t1, t2).
 * This was causing the label collision bug.
 */
void LoopIf() : { String condResult; String loopLabel; String endLabel; }
{
    <LOOPIF>

    {
        loopLabel = irGenerator.newLabel();
        endLabel  = loopLabel + "_end";
        irGenerator.emit("label", loopLabel, "", "");
    }

    condResult = Condition()

    {
        irGenerator.emit("ifFalse", condResult, "", endLabel);
    }

    <HOLDS>

    ( LoopIfBody() )+

    <ENDLOOP>

    {
        irGenerator.emit("goto", "", "", loopLabel);
        irGenerator.emit("label", endLabel, "", "");
    }
}

/*
 * FIX 3: #void on LoopIfBody so JJTree does not wrap
 * body statements in an extra node — they go directly under LoopIf.
 */
void LoopIfBody() #void : {}
{
    LOOKAHEAD(2) Assignment()
    | OutString()
}

void SwitchFor() : { Token id; Token caseVal; }
{
    <SWITCHFOR>
    <LPAREN>
    id = <ID>
    { semanticAnalyzer.checkVariableDeclared(id.image); }
    <RPAREN>
    { irGenerator.emit("switch", id.image, "", ""); }
    (
        <CASE>
        ( caseVal = <NUMBER> | caseVal = <FLOAT_NUMBER>
        | caseVal = <STRING_LITERAL> | caseVal = <CHAR_LITERAL> )
        <COLON>
        { irGenerator.emit("case", caseVal.image, "", ""); }
        SwitchBody()
    )+
    <OTHER> <COLON>
    { irGenerator.emit("other", "", "", ""); }
    SwitchBody()
    <ENDSWITCH>
    { irGenerator.emit("endswitch", "", "", ""); }
}

/*
 * FIX 4: #void on SwitchBody for same reason as LoopIfBody.
 */
void SwitchBody() #void : {}
{
    ( LOOKAHEAD(2) Assignment() | OutString() )+
}

String Condition() : { String left, right; Token op; String res; }
{
    left = Expression()
    ( op=<EQUALS> | op=<LE> | op=<GE> | op=<NE> | op=<LT> | op=<GT> )
    right = Expression()
    {
        res = irGenerator.newTemp();
        irGenerator.emit(op.image, left, right, res);
        return res;
    }
}

String Expression() : { String t1, t2; Token op; }
{
    t1 = Term()
    (
        ( op=<PLUS> | op=<MINUS> )
        t2 = Term()
        {
            String res = irGenerator.newTemp();
            irGenerator.emit(op.image, t1, t2, res);
            t1 = res;
        }
    )*
    { return t1; }
}

String Term() : { String t1, t2; Token op; }
{
    t1 = Factor()
    (
        ( op=<MULT> | op=<DIV> )
        t2 = Factor()
        {
            String res = irGenerator.newTemp();
            irGenerator.emit(op.image, t1, t2, res);
            t1 = res;
        }
    )*
    { return t1; }
}

String Factor() : { Token t; String res; }
{
    t = <NUMBER>         { return t.image; }
    | t = <FLOAT_NUMBER> { return t.image; }
    | t = <ID>
    {
        semanticAnalyzer.checkVariableDeclared(t.image);
        return t.image;
    }
    | t = <STRING_LITERAL> { return t.image; }
    | t = <CHAR_LITERAL>   { return t.image; }
    | <LPAREN> res = Expression() <RPAREN> { return res; }
}
