src/compilerproject/MyNewGrammar.java
/* MyNewGrammar.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. MyNewGrammar.java */
package compilerproject;

import java.util.ArrayList;

public class MyNewGrammar/*@bgen(jjtree)*/implements MyNewGrammarTreeConstants, MyNewGrammarConstants {/*@bgen(jjtree)*/
  protected JJTMyNewGrammarState jjtree = new JJTMyNewGrammarState();public SymbolTable symbolTable = new SymbolTable();
    public SemanticAnalyzer semanticAnalyzer = new SemanticAnalyzer(symbolTable);
    public IRGenerator irGenerator = new IRGenerator();

    public static void main(String args[]) throws ParseException {
        System.out.println("CL Parser - Milestone 2");
        try {
            java.io.InputStream input = (args.length > 0)
                ? new java.io.FileInputStream(args[0])
                : System.in;

            MyNewGrammar parser = new MyNewGrammar(input);

            /* Parse and get root of parse tree */
            SimpleNode root = parser.Start();

            System.out.println("\nSUCCESS: Code parsed successfully!");

            /* Print parse tree */
            System.out.println("\n--- PARSE TREE ---");
            root.dump("  ");

            /* Print semantic summary */
            parser.semanticAnalyzer.printSummary();

            /* Print original IR */
            parser.irGenerator.printIR();

            /* --- MILESTONE 2: OPTIMIZATION --- */
            Optimizer optimizer = new Optimizer(parser.irGenerator.getQuadruples());
            optimizer.optimize();
            optimizer.printOptimized();

            /* --- MILESTONE 2: TARGET CODE GENERATION --- */
            TargetCodeGenerator codeGen = new TargetCodeGenerator(
                optimizer.getOptimizedInstructions()
            );
            codeGen.generate();
            codeGen.printAssembly();

        } catch (java.io.FileNotFoundException e) {
            System.out.println("ERROR: File not found - " + e.getMessage());
        } catch (Exception e) {
            System.out.println("\nERROR: " + e.getMessage());
            e.printStackTrace();
        }
    }

/* ============================= */
/*        GRAMMAR RULES          */
/* ============================= */

/*
 * Start - Root of the parse tree
 * Returns SimpleNode so main() can call root.dump()
 */
  final public SimpleNode Start() throws ParseException {/*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(START_PROG);
      VariablesBlock();
      CodeBlock();
      jj_consume_token(END_PROG);
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

/*
 * VariablesBlock - variables: section
 */
  final public void VariablesBlock() throws ParseException {/*@bgen(jjtree) VariablesBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIABLESBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VAR_SECTION);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT_TYPE:
        case FLOAT_TYPE:
        case CHAR_TYPE:
        case STRING_TYPE:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Declaration();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * Declaration - single variable declaration
 *
 * FIX: Now emits IR instruction for the declaration.
 * Example IR: (=, 3, , abc)  means  abc = 3
 */
  final public void Declaration() throws ParseException {/*@bgen(jjtree) Declaration */
                       SimpleNode jjtn000 = new SimpleNode(JJTDECLARATION);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t; Token id; Token val;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT_TYPE:{
        t = jj_consume_token(INT_TYPE);
        break;
        }
      case FLOAT_TYPE:{
        t = jj_consume_token(FLOAT_TYPE);
        break;
        }
      case STRING_TYPE:{
        t = jj_consume_token(STRING_TYPE);
        break;
        }
      case CHAR_TYPE:{
        t = jj_consume_token(CHAR_TYPE);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id = jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        val = jj_consume_token(NUMBER);
        break;
        }
      case FLOAT_NUMBER:{
        val = jj_consume_token(FLOAT_NUMBER);
        break;
        }
      case STRING_LITERAL:{
        val = jj_consume_token(STRING_LITERAL);
        break;
        }
      case CHAR_LITERAL:{
        val = jj_consume_token(CHAR_LITERAL);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
/* Register in symbol table via semantic analyser */
        semanticAnalyzer.declareVariable(id.image, t.image, val.image);

        /* FIX: Emit IR for declaration - was missing before */
        irGenerator.emit("=", val.image, "", id.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * CodeBlock - code: section
 */
  final public void CodeBlock() throws ParseException {/*@bgen(jjtree) CodeBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTCODEBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CODE_SECTION);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SWITCHFOR:
        case OUTSTRING:
        case LPAREN:
        case FLOAT_NUMBER:
        case NUMBER:
        case STRING_LITERAL:
        case CHAR_LITERAL:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * Statement - routes to correct statement type
 */
  final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2147483647)) {
        Assignment();
      } else if (jj_2_2(2147483647)) {
        LoopIf();
      } else if (jj_2_3(2147483647)) {
        SwitchFor();
      } else if (jj_2_4(2147483647)) {
        OutString();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * Assignment - variable = expression
 * IR: emits (=, exprResult, , varName)
 */
  final public void Assignment() throws ParseException {/*@bgen(jjtree) Assignment */
                      SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token id; String exprResult;
    try {
      id = jj_consume_token(ID);
semanticAnalyzer.checkAssignment(id.image);
      jj_consume_token(ASSIGN);
      exprResult = Expression();
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
irGenerator.emit("=", exprResult, "", id.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * OutString - outString(expr) or outString("string")
 *
 * FIX: Expression() return value was being discarded before.
 * Now captured and emitted as a PRINT instruction.
 */
  final public void OutString() throws ParseException {/*@bgen(jjtree) OutString */
                     SimpleNode jjtn000 = new SimpleNode(JJTOUTSTRING);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);String res; Token t;
    try {
      jj_consume_token(OUTSTRING);
      jj_consume_token(LPAREN);
      if (jj_2_5(2)) {
        res = Expression();
irGenerator.emit("print", res, "", "");
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STRING_LITERAL:{
          t = jj_consume_token(STRING_LITERAL);
irGenerator.emit("print", t.image, "", "");
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * LoopIf - loopif condition holds ... endloop
 *
 * FIX: Now generates proper loop IR with labels and goto.
 *
 * IR generated:
 *   label  L1             <- loop start label
 *   <op>   left  right  t1  <- condition evaluation
 *   ifFalse t1    L1_end  <- exit loop if condition false
 *   ... body statements ...
 *   goto   L1             <- jump back to start
 *   label  L1_end         <- loop end label
 */
  final public void LoopIf() throws ParseException {/*@bgen(jjtree) LoopIf */
                  SimpleNode jjtn000 = new SimpleNode(JJTLOOPIF);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);String condResult; String loopLabel; String endLabel;
    try {
/* Generate loop labels BEFORE parsing condition */
        loopLabel = "L" + irGenerator.newTemp();
        endLabel  = loopLabel + "_end";
        irGenerator.emit("label", loopLabel, "", "");
      condResult = Condition();
/* If condition is false, jump to end of loop */
        irGenerator.emit("ifFalse", condResult, "", endLabel);
      jj_consume_token(HOLDS);
      label_3:
      while (true) {
        LoopIfBody();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OUTSTRING:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(ENDLOOP);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
/* Jump back to loop start to recheck condition */
        irGenerator.emit("goto", "", "", loopLabel);
        irGenerator.emit("label", endLabel, "", "");
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * LoopIfBody - only Assignment and OutString inside loop
 * Enforces no-nesting rule from PDF
 */
  final public void LoopIfBody() throws ParseException {/*@bgen(jjtree) LoopIfBody */
  SimpleNode jjtn000 = new SimpleNode(JJTLOOPIFBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(2)) {
        Assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OUTSTRING:{
          OutString();
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * SwitchFor - switchFor(var) case ... other ... endswitchFor
 *
 * IR generated:
 *   switch  varName
 *   case    value
 *   ... assignment ...
 *   endswitch
 */
  final public void SwitchFor() throws ParseException {/*@bgen(jjtree) SwitchFor */
                     SimpleNode jjtn000 = new SimpleNode(JJTSWITCHFOR);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token id;
    try {
      jj_consume_token(SWITCHFOR);
      jj_consume_token(LPAREN);
      id = jj_consume_token(ID);
semanticAnalyzer.checkVariableDeclared(id.image);
      jj_consume_token(RPAREN);
irGenerator.emit("switch", id.image, "", "");
      label_4:
      while (true) {
        jj_consume_token(CASE);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:{
          jj_consume_token(NUMBER);
          break;
          }
        case FLOAT_NUMBER:{
          jj_consume_token(FLOAT_NUMBER);
          break;
          }
        case STRING_LITERAL:{
          jj_consume_token(STRING_LITERAL);
          break;
          }
        case CHAR_LITERAL:{
          jj_consume_token(CHAR_LITERAL);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(COLON);
        SwitchBody();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CASE:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
      }
      jj_consume_token(OTHER);
      jj_consume_token(COLON);
      SwitchBody();
      jj_consume_token(ENDSWITCH);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
irGenerator.emit("endswitch", "", "", "");
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * SwitchBody - statements inside a case or other branch
 * No nesting allowed
 */
  final public void SwitchBody() throws ParseException {/*@bgen(jjtree) SwitchBody */
  SimpleNode jjtn000 = new SimpleNode(JJTSWITCHBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_5:
      while (true) {
        if (jj_2_7(2)) {
          Assignment();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case OUTSTRING:{
            OutString();
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OUTSTRING:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

/*
 * Condition - conditional expression used in loopif
 *
 * FIX: Now captures both Expression() results and the operator.
 * Emits a comparison IR instruction.
 * Returns the temp variable holding the boolean result.
 *
 * IR example for "num > 0":
 *   (>, num, 0, t1)
 */
  final public String Condition() throws ParseException {/*@bgen(jjtree) Condition */
                       SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);String left, right; Token op; String res;
    try {
      left = Expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUALS:{
        op = jj_consume_token(EQUALS);
        break;
        }
      case LE:{
        op = jj_consume_token(LE);
        break;
        }
      case GE:{
        op = jj_consume_token(GE);
        break;
        }
      case NE:{
        op = jj_consume_token(NE);
        break;
        }
      case LT:{
        op = jj_consume_token(LT);
        break;
        }
      case GT:{
        op = jj_consume_token(GT);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = Expression();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
res = irGenerator.newTemp();
        irGenerator.emit(op.image, left, right, res);
        {if ("" != null) return res;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

/*
 * Expression - addition and subtraction (lowest precedence)
 *
 * Returns the temp variable or operand holding the result.
 * IR example for "abc + xyz":
 *   (+, abc, xyz, t1)
 */
  final public String Expression() throws ParseException {/*@bgen(jjtree) Expression */
                        SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);String t1, t2; Token op;
    try {
      t1 = Term();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          op = jj_consume_token(PLUS);
          break;
          }
        case MINUS:{
          op = jj_consume_token(MINUS);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = Term();
String res = irGenerator.newTemp();
            irGenerator.emit(op.image, t1, t2, res);
            t1 = res;
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return t1;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}
